# public-peppy-libs

./: .gitignore  README.md
bimanual_collision_model/: .gitignore  Cargo.toml  README.md
bimanual_collision_model/examples/: visualize.rs
bimanual_collision_model/src/: assemble.rs  error.rs  fit.rs  geometry.rs  gjk.rs  governor.rs  hull.rs  lib.rs  model.rs  pairs.rs  stl.rs  urdf_collision.rs
bimanual_collision_model/tests/: distance_oracle.rs  dual_arm.rs  fit_containment.rs
bimanual_collision_model/tests/fixtures/: openarm.rs  openarm_v10.urdf
control_core/: Cargo.toml
control_core/src/: butterworth.rs  lib.rs  lowpass.rs  pacer.rs
control_core/src/filters/: butterworth.rs  lowpass.rs  mod.rs
lerobot_dataset/: Cargo.toml  README.md
lerobot_dataset/compliance/: check_dataset.py  check_depth.py  dump_golden_schemas.py  pixi.toml
lerobot_dataset/examples/: generate_depth_fixture.rs  generate_fixture.rs
lerobot_dataset/src/: atomic.rs  config.rs  data.rs  error.rs  frame.rs  golden_tests.rs  layout.rs  lib.rs  writer.rs
lerobot_dataset/src/meta/: episodes.rs  info.rs  mod.rs  stats.rs  tasks.rs
lerobot_dataset/src/video/: concat.rs  depth.rs  encoder.rs  mod.rs  probe.rs  sample.rs
lerobot_dataset/tests/: crash_safety.rs  rollover.rs  video_pipeline.rs
lerobot_dataset/tests/common/: mod.rs
openarm_description/: Cargo.toml  README.md
openarm_description/assets/: openarm_v10.urdf  openarm_v20.urdf
openarm_description/src/: lib.rs
openarm_model/: Cargo.toml  README.md
openarm_model/docs/: gen_diagrams.py
openarm_model/src/: description.rs  fk.rs  ik.rs  lib.rs  model.rs
openarm_model/src/dynamics/: coriolis.rs  friction.rs  gravity.rs  mod.rs
openarm_model/tests/: round_trip.rs
openarm_model/tools/: kdl_reference.cpp
openarm_model/urdf/: README.md  openarm_v10.urdf
peppy-shared/: .gitignore  Cargo.toml
peppy-shared/build-helpers/src/: cargo.rs  fs.rs  hash.rs  lib.rs
peppy-shared/config-test-support/: Cargo.toml
peppy-shared/config-test-support/src/: assertions.rs  fixtures.rs  lib.rs
peppy-shared/core-node-api/: Cargo.toml  build.rs
peppy-shared/core-node-api/schemas/: benchmark.capnp  node.capnp  repo.capnp
peppy-shared/core-node-api/src/: capnp_generated.rs  encoding.rs  env.rs  graph.rs  lib.rs  names.rs  registry.rs
peppy-shared/json5-pretty/: Cargo.toml
peppy-shared/json5-pretty/src/: ident.rs  lib.rs  writer.rs
peppy-shared/peppy-config-model/: Cargo.toml
peppy-shared/peppy-config-model/src/: consts.rs  error.rs  lib.rs  namespace.rs  node.rs  org.rs  peppy_config.rs  repo_node_id.rs  runtime.rs  schema.rs
peppy-shared/peppy-config-model/tests/: example_configurations.rs
peppy-shared/peppy-config-model/tools/: Readme.md  capnp_linux_aarch64  capnp_linux_x86_64  capnp_macos_aarch64
peppy-shared/peppy-messaging-interface/: Cargo.toml  Readme.md  build.rs
peppy-shared/peppy-messaging-interface/src/: adapters.rs  lib.rs  types.rs  wire.rs  zenoh_config.rs  zenohd.rs
peppy-shared/peppy-messaging-interface/tests/: adopt_external.rs  collision.rs  fifo_noise.rs  probe_tls.rs  refederate_pinned.rs  wire.rs  zenoh.rs  zenoh_tls.rs
peppy-shared/peppylib-py/: Cargo.toml  Readme.md  pixi.toml  pyproject.toml  release_pypi.py
peppy-shared/peppylib-py/peppylib/: __init__.py  clock.py  config.py  stack.py
peppy-shared/peppylib-py/src/: core_node.rs  messaging.rs  runtime.rs
peppy-shared/peppylib-py/tests/: common.py  conftest.py  test_action.py  test_node_health_service.py  test_node_ready.py  test_node_shutdown.py  test_runner.py  test_service.py  test_topics.py
peppy-shared/peppylib-rs/: Cargo.toml  Readme.md  build.rs
peppy-shared/peppylib-rs/schemas/: observation_update.capnp  peer_update.capnp  slot_update.capnp
peppy-shared/peppylib-rs/src/: clock.rs  config.rs  core_node.rs  datastore.rs  encoding.rs  error.rs  info.rs  lib.rs  messaging.rs  runtime.rs  services.rs  stack.rs
peppy-shared/peppylib-rs/tests/: actions.rs  common.rs  core_node.rs  pairing.rs  presence.rs  ready_node.rs  runner.rs  services.rs  shutdown_node.rs  topics.rs
peppyos-shared/: .gitignore  Cargo.toml
peppyos-shared/build-helpers/: Cargo.toml
peppyos-shared/build-helpers-internal/: Cargo.toml
peppyos-shared/build-helpers-internal/src/: cargo.rs  command.rs  fs.rs  lib.rs  so_build.rs
peppyos-shared/build-helpers-shared/: Cargo.toml
peppyos-shared/build-helpers-shared/src/: lib.rs
peppyos-shared/build-helpers/src/: cargo.rs  command.rs  fs.rs  lib.rs
peppyos-shared/config-internal/: Cargo.toml  build.rs
peppyos-shared/config-internal/schemas/: frame.capnp
peppyos-shared/config-internal/src/: atomic_write.rs  common.rs  consts.rs  encoding.rs  error.rs  fingerprint.rs  interface.rs  json5_pretty.rs  launcher.rs  lib.rs  node.rs  peppy_config.rs  runtime.rs  source.rs
peppyos-shared/config-internal/tests/: example_configurations.rs
peppyos-shared/config-internal/tools/: Readme.md  capnp_linux_x86_64
peppyos-shared/config-test-support/: Cargo.toml
peppyos-shared/config-test-support-internal/: Cargo.toml
peppyos-shared/config-test-support-internal/src/: lib.rs
peppyos-shared/config-test-support/src/: lib.rs  scratch.rs
peppyos-shared/core-node-api/: Cargo.toml  build.rs
peppyos-shared/peppy-config-model/: Cargo.toml
peppyos-shared/peppy-messaging-interface/: Cargo.toml
peppyos-shared/peppylib-py/: Cargo.toml  Readme.md  build.rs  pixi.toml  pyproject.toml
peppyos-shared/peppylib-rs/: Cargo.toml  Readme.md  build.rs
peppyos-shared/pmi-internal/: Cargo.toml  build.rs
peppyos/peppylib-py/: .gitignore  Cargo.toml  pixi.toml
peppyos/peppylib-rs/: Cargo.toml  build.rs
sim_bridge_core/: Cargo.toml  README.md
sim_bridge_core/src/: bridge.rs  config.rs  lib.rs  pipeline.rs  services.rs  transport.rs  types.rs
srs_model/: Cargo.toml
srs_model/benches/: compute.rs
srs_model/src/: arm 2.rs  arm.rs  coriolis.rs  error.rs  fk.rs  gravity.rs  ik.rs  jacobian.rs  lib.rs  model.rs  payload.rs
srs_model/tests/: openarm_v2.rs  psi_completeness.rs  round_trip.rs
(+411 files in other folders)
