[package]
name = "bimanual_collision_model"
version = "0.1.0"
edition = "2024"
description = "Runtime self-collision detection for a bimanual arm: URDF-fitted capsules, pairwise minimum distance, and a direction-aware proximity governor. Pure Rust, no hardware or messaging deps."
license = "Apache-2.0"

[dependencies]
srs_model = { path = "../srs_model" }
serde_json = "1"
urdf-rs = "0.9"

[dev-dependencies]
rand = "0.8"

# Construction fits capsules from meshes; the sampling loops are numeric and
# crawl unoptimized, so tests build this crate with light optimization.
[profile.dev]
opt-level = 1
