[package]
name = "bimanual_collision_model"
version = "0.1.0"
edition = "2024"
description = "Runtime self-collision detection for a bimanual arm: URDF-fitted convex hulls, GJK/EPA minimum distance, and a direction-aware proximity governor. Pure Rust, no hardware or messaging deps."
license = "Apache-2.0"

[dependencies]
srs_model = { path = "../srs_model" }
urdf-rs = "0.9"

[dev-dependencies]
rand = "0.10"
serde_json = "1"

# Construction hulls and decomposes the meshes; those numeric loops crawl
# unoptimized, so tests build this crate with light optimization.
[profile.dev]
opt-level = 1
