[package]
name = "openarm_description"
version = "0.1.0"
edition = "2024"
description = "The OpenArm robot descriptions (v1.0 and v2.0): the single embedded source of truth for the URDFs (and, behind the `meshes` feature, the collision meshes), plus the constants describing their control margins, selected by HardwareVersion. Pure data, no kinematics or solver deps."

[features]
# Embed the collision meshes and expose `write_meshes_to` (and the `emit_meshes`
# binary). Off by default so consumers that only need the URDF (e.g. the per-arm
# control node) do not carry the mesh bytes.
meshes = []

# Materialize a generation's collision meshes to a directory for a non-Rust consumer
# (the sim). Needs the embedded bytes, so it requires the `meshes` feature.
[[bin]]
name = "emit_meshes"
required-features = ["meshes"]

[dev-dependencies]
urdf-rs = "0.9"
