[package]
name = "openarm_model"
version = "0.1.0"
edition = "2024"
description = "Rigid-body model of the OpenArm 7-DOF arm: forward + closed-form inverse kinematics and gravity/Coriolis/friction dynamics. Pure Rust, no hardware deps."
license = "Apache-2.0"

[dependencies]
k = "0.32"
urdf-rs = "0.9"

[dev-dependencies]
rand = "0.8"
