[package]
name = "sim_bridge_core"
version = "0.1.0"
edition = "2024"

[dependencies]
# No peppylib here — it is generated per node by `peppy node sync` and ships
# with peppy nodes. Nodes implement the RawTransport trait with their own
# generated peppylib and hand it to SimBridge / call_sim.
tokio      = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing    = "0.1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
