[package]
name = "config"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror.workspace = true
serde.workspace = true
serde_json5.workspace = true
serde_path_to_error = "0.1"
sha2.workspace = true
# `MessageFormat` keeps its declared field order via `IndexMap`; the capnp wire
# layout downstream is keyed off that order, so it must be preserved.
indexmap = { version = "2.2", features = ["serde"] }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
walkdir = "2.5"

[features]
default = []
test_helpers = []
