[package]
name = "core-node-api"
version = "0.0.1"
authors = ["Tuatini Godard <tuatini@peppy.bot>"]
edition = "2024"

[dependencies]
# This is the only crate that is allowed to be imported to avoid future circular dependencies
config = { path = "../config-internal" }
capnp = "0.26"
bytes = "1.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json5 = "0.2"
thiserror = "2.0"
url = "2"
gix-url = "0.36"

[build-dependencies]
build-helpers = { path = "../build-helpers-internal" }
capnpc = "0.26"

[dev-dependencies]
tempfile = "3.10"
# Matches the codec the daemon uses for `graph_json` on the wire, so the
# graph round-trip tests exercise the real serialization path.
serde_json = "1.0"
