[package]
name = "core-node-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
# This is the only crate that is allowed to be imported to avoid future circular dependencies
config = { path = "../config-internal" }
capnp.workspace = true
bytes.workspace = true
chrono = "0.4"
serde.workspace = true
serde_json5.workspace = true
thiserror.workspace = true
url = "2"
gix-url = "0.36"

[build-dependencies]
build-helpers-shared = { path = "../build-helpers-shared" }
capnpc.workspace = true

[dev-dependencies]
tempfile.workspace = true
# Matches the codec the daemon uses for `graph_json` on the wire, so the
# graph round-trip tests exercise the real serialization path.
serde_json.workspace = true
