[package]
name = "peppylib-py"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lib]
name = "_peppylib"
crate-type = ["cdylib"]

[dependencies]
config = { path = "../config-internal" }
core-node-api = { path = "../core-node-api" }
peppylib = { path = "../peppylib-rs", package = "peppylib-rs" }
bytes.workspace = true
pmi = { path = "../pmi-internal", features = ["zenoh", "build_zenoh"] }
pythonize.workspace = true
pyo3 = { workspace = true, features = ["extension-module", "abi3-py311"] }
pyo3-async-runtimes = { workspace = true, features = ["tokio-runtime"] }
rand.workspace = true
names-generator2 = "0.2.1"
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros"] }
parking_lot = "0.12"

[build-dependencies]
build-helpers-shared = { path = "../build-helpers-shared" }
pyo3-build-config.workspace = true
