[package]
name = "peppylib-py"
version.workspace = true
edition.workspace = true

[lib]
name = "_peppylib"
crate-type = ["cdylib"]

[dependencies]
bytes = "1"
# Reverse path deps into the peppyos submodule: these crates have not been moved
# to peppyos-shared yet. Valid only inside the superproject checkout (peppyos and
# nodes_shared_code are sibling submodules). Tightens as crates migrate per PR.
config = { path = "../config-internal" }
# core-node-api now lives here in peppyos-shared; local sibling path.
core-node-api = { path = "../core-node-api" }
pmi = { path = "../pmi-internal", features = ["zenoh", "build_zenoh"] }
# peppylib lives here in peppyos-shared now (package `peppylib-rs`, lib `peppylib`).
peppylib = { package = "peppylib-rs", path = "../peppylib-rs" }
pythonize = { version = "0.29" }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py311"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
rand = "0.10"
names-generator2 = "0.2.1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
parking_lot = { workspace = true }

[build-dependencies]
build-helpers = { path = "../../../peppyos/crates/build-helpers-internal" }
pyo3-build-config = "0.29"
