[project]
name = "peppylib"
dynamic = ["version"]
license = { text = "Apache-2.0" }
authors = [{ name = "GODARD Tuatini", email = "tuatini@peppy.bot" }]
requires-python = ">=3.11,<3.14"
description = "The peppyOS control library"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Homepage = "https://dev.peppy.bot"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "peppylib._peppylib"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
