[package]
name = "peppylib-rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false
homepage = "https://dev.peppy.bot"
description = "The peppyOS control library"
license = "MIT OR Apache-2.0"
readme = "Readme.md"

# The package is published as `peppylib-rs`, but the importable crate stays
# `peppylib` so dependents (e.g. peppylib-py) and the integration tests refer
# to it as `peppylib`.
[lib]
name = "peppylib"

[dependencies]
pmi = { path = "../pmi-internal" }
config = { path = "../config-internal" }
core-node-api = { path = "../core-node-api" }
thiserror.workspace = true                         # Avoid Anyhow in this crate
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
bytes.workspace = true
futures = "0.3"
sha2.workspace = true
serde.workspace = true
serde_json5.workspace = true
serde_json.workspace = true
schemars = "1.2"
jsonschema = "0.46"
tokio-util = "0.7"
tempfile = { workspace = true, optional = true }
capnp.workspace = true
# `Subscription::rx` is a `flume::Receiver` (see the type doc in pmi);
# peppylib's `TryRecvError` converts from flume's matching error.
flume.workspace = true

[build-dependencies]
build-helpers = { path = "../build-helpers-internal" }
capnpc.workspace = true

[dev-dependencies]
libc = "0.2"
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-util = "0.7"
rand.workspace = true
regex = "1"
config = { path = "../config-internal", features = ["test_helpers"] }
pmi = { path = "../pmi-internal", features = ["zenoh", "build_zenoh"] }
ctor = "1.0"
# Raw zenoh session for wire-level observation in messaging tests (probe
# accounting). Pinned to the exact version pmi pins so the test binary
# shares pmi's zenoh build instead of compiling a second one.
zenoh.workspace = true

[features]
default = ["zenoh"]
zenoh = ["pmi/zenoh"]
