[package]
name = "peppylib-rs"
version.workspace = true
edition.workspace = true
homepage = "https://dev.peppy.bot"
description = "The peppyOS control library"
license = "MIT OR Apache-2.0"
readme = "Readme.md"

# The package is named `peppylib-rs` (to sit alongside `peppylib-py` in the
# peppyos-shared workspace), but the library target stays `peppylib` so this
# crate's own tests/doctests and every consumer keep `use peppylib::...`.
# Consumers depend on it as `peppylib = { package = "peppylib-rs", path = ... }`.
[lib]
name = "peppylib"

[dependencies]
# Reverse path deps into the peppyos submodule: these crates have not been moved
# to peppyos-shared yet. Valid only inside the superproject checkout (peppyos and
# nodes_shared_code are sibling submodules). Tightens as crates migrate per PR.
pmi = { path = "../peppy-messaging-interface" }
config = { path = "../config" }
# core-node-api now lives here in peppyos-shared; local sibling path.
core-node-api = { path = "../core-node-api" }
thiserror = "2.0"                                  # Avoid Anyhow in this crate
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
bytes = "1"
futures = "0.3"
sha2 = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json5 = "0.2"
serde_json = "1.0"
schemars = "1.2"
jsonschema = "0.46"
tokio-util = "0.7"
tempfile = { version = "3.10", optional = true }
capnp = "0.26"
# `Subscription::rx` is a `flume::Receiver` (see the type doc in pmi);
# peppylib's `TryRecvError` converts from flume's matching error.
flume = "0.12"

[build-dependencies]
build-helpers = { path = "../build-helpers" }
capnpc = "0.26"

[dev-dependencies]
libc = "0.2"
tempfile = "3.10"
askama = "0.16"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = "0.7"
rand = "0.10"
regex = "1"
config = { path = "../config", features = [
    "fingerprint_test_helpers",
] }
pmi = { path = "../peppy-messaging-interface", features = [
    "zenoh",
    "build_zenoh",
] }
ctor = "1.0"
# Raw zenoh session for wire-level observation in messaging tests (probe
# accounting). Pinned to the exact version pmi pins so the test binary
# shares pmi's zenoh build instead of compiling a second one.
zenoh = "=1.9.0"

[features]
default = ["zenoh"]
zenoh = ["pmi/zenoh"]
