[package]
name = "pmi"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
config = { path = "../config-internal" }
bytes.workspace = true
serde_json.workspace = true
# `sync` + `rt` are what pmi's own code names directly. The MockAdapter also uses
# tokio `time` and the multi-thread runtime; those arrive transitively via zenoh,
# so the mock is not built as a standalone zenoh-less backend (see lib.rs).
tokio = { workspace = true, features = ["sync", "rt"] }
# Used for Subscription / ServiceQueryable channels: a flume bounded
# channel lets the zenoh reception callback `send` synchronously (with
# backpressure) from any thread, including zenoh's runtime worker where
# `tokio::sync::mpsc::Sender::blocking_send` would panic.
flume.workspace = true
tracing.workspace = true
derive_more = { version = "2", features = ["from"] }
tempfile.workspace = true

# Optional deps
# Exact-pinned; peppylib pins the same `=1.9.0` in its [dev-dependencies] so
# its test binaries share this build — bump the two together.
zenoh = { workspace = true, optional = true }

[build-dependencies]
build-helpers-shared = { path = "../build-helpers-shared" }

[dev-dependencies]
tokio = { workspace = true, features = [
    "sync",
    "rt",
    "macros",
    "time",
    "test-util",
] }
serde_json5.workspace = true
# Used by the FIFO-noise regression test in `tests/fifo_noise.rs` to install a
# process-wide tracing subscriber that counts `zenoh::api::handlers::fifo`
# ERROR events. Already in the dependency tree transitively via zenoh.
tracing-subscriber = "0.3"

[features]
# `router` is on by default so the daemon build is unchanged; a client-only
# build (publish/subscribe/services against an existing router, no process
# supervision) is `default-features = false, features = ["zenoh"]`.
default = ["zenoh", "router"]
# Zenoh client transport: publish/subscribe/services against an existing router.
zenoh = ["dep:zenoh"]
# Router management: spawn and supervise the external zenohd daemon process
# (ZenohdFacade, ZenohdInstance, RouterHealthChecker, ZenohAdapter::with_router).
router = ["zenoh"]
# Also download the pre-built zenohd binary from GitHub releases at build time.
build_zenoh = ["router"]
