[package]
name = "peppylib-py"
version.workspace = true
edition.workspace = true

[lib]
name = "_peppylib"
crate-type = ["cdylib"]

[dependencies]
config = { path = "../config-internal" }
core-node-api = { path = "../core-node-api" }
peppylib = { path = "../peppylib-rs" }
bytes = "1"
pmi = { path = "../pmi-internal", features = ["zenoh", "build_zenoh"] }
pythonize = { version = "0.29" }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py311"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
rand = "0.10"
names-generator2 = "0.2.1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
parking_lot = { workspace = true }

[build-dependencies]
build-helpers = { path = "../build-helpers-internal" }
pyo3-build-config = "0.29"
