[package]
name = "peppylib-rs"
version = "0.0.1"
edition = "2024"
homepage = "https://dev.peppy.bot"
description = "The peppyOS control library"
license = "MIT OR Apache-2.0"
readme = "Readme.md"

[dependencies]
pmi = { path = "../pmi-internal" }
config = { path = "../config-internal" }
core-node-api = { path = "../core-node-api" }
thiserror = "2.0"                                  # Avoid Anyhow in this crate
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
bytes = "1"
futures = "0.3"
sha2 = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json5 = "0.2"
serde_json = "1.0"
schemars = "1.2"
jsonschema = "0.46"
tokio-util = "0.7"
tempfile = { version = "3.10", optional = true }
capnp = "0.26"
# `Subscription::rx` is a `flume::Receiver` (see the type doc in pmi);
# peppylib's `TryRecvError` converts from flume's matching error.
flume = "0.12"

[build-dependencies]
build-helpers = { path = "../build-helpers-internal" }
capnpc = "0.26"

[dev-dependencies]
libc = "0.2"
tempfile = "3.10"
askama = "0.16"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = "0.7"
rand = "0.10"
regex = "1"
config = { path = "../config-internal", features = ["test_helpers"] }
pmi = { path = "../pmi-internal", features = ["zenoh", "build_zenoh"] }
ctor = "1.0"
# Raw zenoh session for wire-level observation in messaging tests (probe
# accounting). Pinned to the exact version pmi pins so the test binary
# shares pmi's zenoh build instead of compiling a second one.
zenoh = "=1.9.0"

[features]
default = ["zenoh"]
zenoh = ["pmi/zenoh"]
